--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Homework_37</string>
     <string name="button">Button</string>
     <string name="textView">fragment</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_camera">Camera</string>
+    <string name="action_call">Call</string>
+    <string name="action_help">Help</string>
 </resources>
